--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,13 @@
     <title>picker</title>
   </head>
   <body>
+
     <noscript>
       <strong>We're sorry but picker doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.8.3/katex.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>-->
   </body>
 </html>
