添加微信验证码

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>picker</title>
+    <link rel="stylesheet" type="text/css" href="https://picker-oss.oss-cn-beijing.aliyuncs.com/meta/css/github.min.css">
   </head>
   <body>
 
