--- a/public/index.html
+++ b/public/index.html
@@ -6,14 +6,18 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>picker</title>
-    <link rel="stylesheet" type="text/css" href="https://picker-oss.oss-cn-beijing.aliyuncs.com/meta/css/github.min.css">
   </head>
+  <style>
+    #app {
+      font-size: 20px;
+    }
+  </style>
   <body>
-
     <noscript>
       <strong>We're sorry but picker doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
-    <div id="app"></div>
+    <div id="app">
+    </div>
     <!-- built files will be auto injected -->
     <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.8.3/katex.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>-->
