--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,9 @@
     #app {
       font-size: 20px;
     }
+    .markdown-body .highlight pre, .markdown-body pre {
+      font-size: 120% !important;
+    }
   </style>
   <body>
     <noscript>
